[package]
name = "lyubitori"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.2.4", features = ["derive"] }
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde_json = "1.0"
egg-mode = "0.16.0"
futures = "0.3.21"
tokio = { version = "1.19.2", features = ["full"] }